// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-labelledby="notificationsButton"
        id="notificationsSettings"
        role="tabpanel"
      >
        <div
          class="modal-header"
        >
          <button
            class="close"
            data-dismiss="modal"
            id="closeButton"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            class="modal-title"
          >
            <div
              class="modal-back"
            >
              <i
                aria-label="Collapse Icon"
                class="fa fa-angle-left"
              />
            </div>
            Notification settings
          </h4>
        </div>
        <div
          class="user-settings"
        >
          <div
            class="userSettingDesktopHeader"
          >
            <h3
              class="tab-header"
              id="notificationSettingsTitle"
            >
              Notifications
            </h3>
          </div>
          <div
            class="divider-dark first"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="desktopAndMobileTitle"
              >
                Desktop and mobile notifications
                <div />
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="desktopAndMobileTitle desktopAndMobileEdit"
                class="color--link style--none section-min__edit"
                id="desktopAndMobileEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="desktopAndMobileDesc"
            >
              Configure desktop and mobile settings
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="desktopNotificationSoundTitle"
              >
                Desktop notification sounds
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="desktopNotificationSoundTitle desktopNotificationSoundEdit"
                class="color--link style--none section-min__edit"
                id="desktopNotificationSoundEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="desktopNotificationSoundDesc"
            >
              No sound
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="emailTitle"
              >
                Email notifications
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="emailTitle emailEdit"
                class="color--link style--none section-min__edit"
                id="emailEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="emailDesc"
            >
              Email notifications are not enabled
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="keywordsAndMentionsTitle"
              >
                Keywords that trigger notifications
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="keywordsAndMentionsTitle keywordsAndMentionsEdit"
                class="color--link style--none section-min__edit"
                id="keywordsAndMentionsEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="keywordsAndMentionsDesc"
            >
              "@some-user"
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="keywordsAndHighlightTitle"
              >
                Keywords that get highlighted (without notifications)
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="keywordsAndHighlightTitle keywordsAndHighlightEdit"
                class="color--link style--none section-min__edit"
                id="keywordsAndHighlightEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="keywordsAndHighlightDesc"
            >
              None
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="divider-light"
          />
          <div
            style="margin-top: 20px;"
          >
            <div
              class="sectionNoticeContainer hint"
            >
              <div
                class="sectionNoticeContent"
              >
                <i
                  class="icon sectionNoticeIcon icon-lightbulb-outline hint"
                />
                <div
                  class="sectionNoticeBody"
                >
                  <h4
                    class="sectionNoticeTitle"
                  >
                    Troubleshooting notifications
                  </h4>
                  <p>
                    Not receiving notifications? Start by sending a test notification to all your devices to check if they’re working as expected. If issues persist, explore ways to solve them with troubleshooting steps.
                  </p>
                  <div
                    class="sectionNoticeActions"
                  >
                    <button
                      class="btn btn-sm sectionNoticeButton btn-primary"
                    >
                      Send a test notification
                    </button>
                    <button
                      class="btn btn-sm sectionNoticeButton btn-tertiary"
                    >
                      Troubleshooting docs
                      <i
                        class="icon icon-open-in-new"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-labelledby="notificationsButton"
      id="notificationsSettings"
      role="tabpanel"
    >
      <div
        class="modal-header"
      >
        <button
          class="close"
          data-dismiss="modal"
          id="closeButton"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          class="modal-title"
        >
          <div
            class="modal-back"
          >
            <i
              aria-label="Collapse Icon"
              class="fa fa-angle-left"
            />
          </div>
          Notification settings
        </h4>
      </div>
      <div
        class="user-settings"
      >
        <div
          class="userSettingDesktopHeader"
        >
          <h3
            class="tab-header"
            id="notificationSettingsTitle"
          >
            Notifications
          </h3>
        </div>
        <div
          class="divider-dark first"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="desktopAndMobileTitle"
            >
              Desktop and mobile notifications
              <div />
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="desktopAndMobileTitle desktopAndMobileEdit"
              class="color--link style--none section-min__edit"
              id="desktopAndMobileEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="desktopAndMobileDesc"
          >
            Configure desktop and mobile settings
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="desktopNotificationSoundTitle"
            >
              Desktop notification sounds
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="desktopNotificationSoundTitle desktopNotificationSoundEdit"
              class="color--link style--none section-min__edit"
              id="desktopNotificationSoundEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="desktopNotificationSoundDesc"
          >
            No sound
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="emailTitle"
            >
              Email notifications
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="emailTitle emailEdit"
              class="color--link style--none section-min__edit"
              id="emailEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="emailDesc"
          >
            Email notifications are not enabled
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="keywordsAndMentionsTitle"
            >
              Keywords that trigger notifications
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="keywordsAndMentionsTitle keywordsAndMentionsEdit"
              class="color--link style--none section-min__edit"
              id="keywordsAndMentionsEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="keywordsAndMentionsDesc"
          >
            "@some-user"
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="keywordsAndHighlightTitle"
            >
              Keywords that get highlighted (without notifications)
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="keywordsAndHighlightTitle keywordsAndHighlightEdit"
              class="color--link style--none section-min__edit"
              id="keywordsAndHighlightEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="keywordsAndHighlightDesc"
          >
            None
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="divider-light"
        />
        <div
          style="margin-top: 20px;"
        >
          <div
            class="sectionNoticeContainer hint"
          >
            <div
              class="sectionNoticeContent"
            >
              <i
                class="icon sectionNoticeIcon icon-lightbulb-outline hint"
              />
              <div
                class="sectionNoticeBody"
              >
                <h4
                  class="sectionNoticeTitle"
                >
                  Troubleshooting notifications
                </h4>
                <p>
                  Not receiving notifications? Start by sending a test notification to all your devices to check if they’re working as expected. If issues persist, explore ways to solve them with troubleshooting steps.
                </p>
                <div
                  class="sectionNoticeActions"
                >
                  <button
                    class="btn btn-sm sectionNoticeButton btn-primary"
                  >
                    Send a test notification
                  </button>
                  <button
                    class="btn btn-sm sectionNoticeButton btn-tertiary"
                  >
                    Troubleshooting docs
                    <i
                      class="icon icon-open-in-new"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "replaceStoreState": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
  "updateStoreState": [Function],
}
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot when its a starter free 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-labelledby="notificationsButton"
        id="notificationsSettings"
        role="tabpanel"
      >
        <div
          class="modal-header"
        >
          <button
            class="close"
            data-dismiss="modal"
            id="closeButton"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            class="modal-title"
          >
            <div
              class="modal-back"
            >
              <i
                aria-label="Collapse Icon"
                class="fa fa-angle-left"
              />
            </div>
            Notification settings
          </h4>
        </div>
        <div
          class="user-settings"
        >
          <div
            class="userSettingDesktopHeader"
          >
            <h3
              class="tab-header"
              id="notificationSettingsTitle"
            >
              Notifications
            </h3>
          </div>
          <div
            class="divider-dark first"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="desktopAndMobileTitle"
              >
                Desktop and mobile notifications
                <div />
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="desktopAndMobileTitle desktopAndMobileEdit"
                class="color--link style--none section-min__edit"
                id="desktopAndMobileEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="desktopAndMobileDesc"
            >
              Configure desktop and mobile settings
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="desktopNotificationSoundTitle"
              >
                Desktop notification sounds
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="desktopNotificationSoundTitle desktopNotificationSoundEdit"
                class="color--link style--none section-min__edit"
                id="desktopNotificationSoundEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="desktopNotificationSoundDesc"
            >
              No sound
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="emailTitle"
              >
                Email notifications
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="emailTitle emailEdit"
                class="color--link style--none section-min__edit"
                id="emailEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="emailDesc"
            >
              Email notifications are not enabled
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="keywordsAndMentionsTitle"
              >
                Keywords that trigger notifications
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="keywordsAndMentionsTitle keywordsAndMentionsEdit"
                class="color--link style--none section-min__edit"
                id="keywordsAndMentionsEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="keywordsAndMentionsDesc"
            >
              "@some-user"
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="divider-light"
          />
          <div
            class="section-min isDisabled"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title isDisabled"
                id="keywordsAndHighlightTitle"
              >
                Keywords that get highlighted (without notifications)
              </h4>
              <span
                class="RestrictedIndicator__icon-tooltip-container"
              >
                <div
                  class="RestrictedIndicator__content"
                >
                  <i
                    class="RestrictedIndicator__icon-tooltip icon icon-key-variant"
                  />
                  Unavailable
                </div>
              </span>
            </div>
            <div
              class="section-min__describe isDisabled"
              id="keywordsAndHighlightDesc"
            >
              None
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            style="margin-top: 20px;"
          >
            <div
              class="sectionNoticeContainer hint"
            >
              <div
                class="sectionNoticeContent"
              >
                <i
                  class="icon sectionNoticeIcon icon-lightbulb-outline hint"
                />
                <div
                  class="sectionNoticeBody"
                >
                  <h4
                    class="sectionNoticeTitle"
                  >
                    Troubleshooting notifications
                  </h4>
                  <p>
                    Not receiving notifications? Start by sending a test notification to all your devices to check if they’re working as expected. If issues persist, explore ways to solve them with troubleshooting steps.
                  </p>
                  <div
                    class="sectionNoticeActions"
                  >
                    <button
                      class="btn btn-sm sectionNoticeButton btn-primary"
                    >
                      Send a test notification
                    </button>
                    <button
                      class="btn btn-sm sectionNoticeButton btn-tertiary"
                    >
                      Troubleshooting docs
                      <i
                        class="icon icon-open-in-new"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-labelledby="notificationsButton"
      id="notificationsSettings"
      role="tabpanel"
    >
      <div
        class="modal-header"
      >
        <button
          class="close"
          data-dismiss="modal"
          id="closeButton"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          class="modal-title"
        >
          <div
            class="modal-back"
          >
            <i
              aria-label="Collapse Icon"
              class="fa fa-angle-left"
            />
          </div>
          Notification settings
        </h4>
      </div>
      <div
        class="user-settings"
      >
        <div
          class="userSettingDesktopHeader"
        >
          <h3
            class="tab-header"
            id="notificationSettingsTitle"
          >
            Notifications
          </h3>
        </div>
        <div
          class="divider-dark first"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="desktopAndMobileTitle"
            >
              Desktop and mobile notifications
              <div />
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="desktopAndMobileTitle desktopAndMobileEdit"
              class="color--link style--none section-min__edit"
              id="desktopAndMobileEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="desktopAndMobileDesc"
          >
            Configure desktop and mobile settings
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="desktopNotificationSoundTitle"
            >
              Desktop notification sounds
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="desktopNotificationSoundTitle desktopNotificationSoundEdit"
              class="color--link style--none section-min__edit"
              id="desktopNotificationSoundEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="desktopNotificationSoundDesc"
          >
            No sound
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="emailTitle"
            >
              Email notifications
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="emailTitle emailEdit"
              class="color--link style--none section-min__edit"
              id="emailEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="emailDesc"
          >
            Email notifications are not enabled
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="keywordsAndMentionsTitle"
            >
              Keywords that trigger notifications
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="keywordsAndMentionsTitle keywordsAndMentionsEdit"
              class="color--link style--none section-min__edit"
              id="keywordsAndMentionsEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="keywordsAndMentionsDesc"
          >
            "@some-user"
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="divider-light"
        />
        <div
          class="section-min isDisabled"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title isDisabled"
              id="keywordsAndHighlightTitle"
            >
              Keywords that get highlighted (without notifications)
            </h4>
            <span
              class="RestrictedIndicator__icon-tooltip-container"
            >
              <div
                class="RestrictedIndicator__content"
              >
                <i
                  class="RestrictedIndicator__icon-tooltip icon icon-key-variant"
                />
                Unavailable
              </div>
            </span>
          </div>
          <div
            class="section-min__describe isDisabled"
            id="keywordsAndHighlightDesc"
          >
            None
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          style="margin-top: 20px;"
        >
          <div
            class="sectionNoticeContainer hint"
          >
            <div
              class="sectionNoticeContent"
            >
              <i
                class="icon sectionNoticeIcon icon-lightbulb-outline hint"
              />
              <div
                class="sectionNoticeBody"
              >
                <h4
                  class="sectionNoticeTitle"
                >
                  Troubleshooting notifications
                </h4>
                <p>
                  Not receiving notifications? Start by sending a test notification to all your devices to check if they’re working as expected. If issues persist, explore ways to solve them with troubleshooting steps.
                </p>
                <div
                  class="sectionNoticeActions"
                >
                  <button
                    class="btn btn-sm sectionNoticeButton btn-primary"
                  >
                    Send a test notification
                  </button>
                  <button
                    class="btn btn-sm sectionNoticeButton btn-tertiary"
                  >
                    Troubleshooting docs
                    <i
                      class="icon icon-open-in-new"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "replaceStoreState": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
  "updateStoreState": [Function],
}
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot when its team edition 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-labelledby="notificationsButton"
        id="notificationsSettings"
        role="tabpanel"
      >
        <div
          class="modal-header"
        >
          <button
            class="close"
            data-dismiss="modal"
            id="closeButton"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            class="modal-title"
          >
            <div
              class="modal-back"
            >
              <i
                aria-label="Collapse Icon"
                class="fa fa-angle-left"
              />
            </div>
            Notification settings
          </h4>
        </div>
        <div
          class="user-settings"
        >
          <div
            class="userSettingDesktopHeader"
          >
            <h3
              class="tab-header"
              id="notificationSettingsTitle"
            >
              Notifications
            </h3>
          </div>
          <div
            class="divider-dark first"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="desktopAndMobileTitle"
              >
                Desktop and mobile notifications
                <div />
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="desktopAndMobileTitle desktopAndMobileEdit"
                class="color--link style--none section-min__edit"
                id="desktopAndMobileEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="desktopAndMobileDesc"
            >
              Configure desktop and mobile settings
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="desktopNotificationSoundTitle"
              >
                Desktop notification sounds
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="desktopNotificationSoundTitle desktopNotificationSoundEdit"
                class="color--link style--none section-min__edit"
                id="desktopNotificationSoundEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="desktopNotificationSoundDesc"
            >
              No sound
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="emailTitle"
              >
                Email notifications
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="emailTitle emailEdit"
                class="color--link style--none section-min__edit"
                id="emailEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="emailDesc"
            >
              Email notifications are not enabled
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="section-min"
          >
            <div
              class="section-min__header"
            >
              <h4
                class="section-min__title"
                id="keywordsAndMentionsTitle"
              >
                Keywords that trigger notifications
              </h4>
              <button
                aria-expanded="false"
                aria-labelledby="keywordsAndMentionsTitle keywordsAndMentionsEdit"
                class="color--link style--none section-min__edit"
                id="keywordsAndMentionsEdit"
              >
                <i
                  aria-hidden="true"
                  class="icon-pencil-outline"
                  title="Edit Icon"
                />
                Edit
              </button>
            </div>
            <div
              class="section-min__describe"
              id="keywordsAndMentionsDesc"
            >
              "@some-user"
            </div>
          </div>
          <div
            class="divider-light"
          />
          <div
            class="divider-light"
          />
          <div
            style="margin-top: 20px;"
          >
            <div
              class="sectionNoticeContainer hint"
            >
              <div
                class="sectionNoticeContent"
              >
                <i
                  class="icon sectionNoticeIcon icon-lightbulb-outline hint"
                />
                <div
                  class="sectionNoticeBody"
                >
                  <h4
                    class="sectionNoticeTitle"
                  >
                    Troubleshooting notifications
                  </h4>
                  <p>
                    Not receiving notifications? Start by sending a test notification to all your devices to check if they’re working as expected. If issues persist, explore ways to solve them with troubleshooting steps.
                  </p>
                  <div
                    class="sectionNoticeActions"
                  >
                    <button
                      class="btn btn-sm sectionNoticeButton btn-primary"
                    >
                      Send a test notification
                    </button>
                    <button
                      class="btn btn-sm sectionNoticeButton btn-tertiary"
                    >
                      Troubleshooting docs
                      <i
                        class="icon icon-open-in-new"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-labelledby="notificationsButton"
      id="notificationsSettings"
      role="tabpanel"
    >
      <div
        class="modal-header"
      >
        <button
          class="close"
          data-dismiss="modal"
          id="closeButton"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          class="modal-title"
        >
          <div
            class="modal-back"
          >
            <i
              aria-label="Collapse Icon"
              class="fa fa-angle-left"
            />
          </div>
          Notification settings
        </h4>
      </div>
      <div
        class="user-settings"
      >
        <div
          class="userSettingDesktopHeader"
        >
          <h3
            class="tab-header"
            id="notificationSettingsTitle"
          >
            Notifications
          </h3>
        </div>
        <div
          class="divider-dark first"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="desktopAndMobileTitle"
            >
              Desktop and mobile notifications
              <div />
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="desktopAndMobileTitle desktopAndMobileEdit"
              class="color--link style--none section-min__edit"
              id="desktopAndMobileEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="desktopAndMobileDesc"
          >
            Configure desktop and mobile settings
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="desktopNotificationSoundTitle"
            >
              Desktop notification sounds
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="desktopNotificationSoundTitle desktopNotificationSoundEdit"
              class="color--link style--none section-min__edit"
              id="desktopNotificationSoundEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="desktopNotificationSoundDesc"
          >
            No sound
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="emailTitle"
            >
              Email notifications
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="emailTitle emailEdit"
              class="color--link style--none section-min__edit"
              id="emailEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="emailDesc"
          >
            Email notifications are not enabled
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="section-min"
        >
          <div
            class="section-min__header"
          >
            <h4
              class="section-min__title"
              id="keywordsAndMentionsTitle"
            >
              Keywords that trigger notifications
            </h4>
            <button
              aria-expanded="false"
              aria-labelledby="keywordsAndMentionsTitle keywordsAndMentionsEdit"
              class="color--link style--none section-min__edit"
              id="keywordsAndMentionsEdit"
            >
              <i
                aria-hidden="true"
                class="icon-pencil-outline"
                title="Edit Icon"
              />
              Edit
            </button>
          </div>
          <div
            class="section-min__describe"
            id="keywordsAndMentionsDesc"
          >
            "@some-user"
          </div>
        </div>
        <div
          class="divider-light"
        />
        <div
          class="divider-light"
        />
        <div
          style="margin-top: 20px;"
        >
          <div
            class="sectionNoticeContainer hint"
          >
            <div
              class="sectionNoticeContent"
            >
              <i
                class="icon sectionNoticeIcon icon-lightbulb-outline hint"
              />
              <div
                class="sectionNoticeBody"
              >
                <h4
                  class="sectionNoticeTitle"
                >
                  Troubleshooting notifications
                </h4>
                <p>
                  Not receiving notifications? Start by sending a test notification to all your devices to check if they’re working as expected. If issues persist, explore ways to solve them with troubleshooting steps.
                </p>
                <div
                  class="sectionNoticeActions"
                >
                  <button
                    class="btn btn-sm sectionNoticeButton btn-primary"
                  >
                    Send a test notification
                  </button>
                  <button
                    class="btn btn-sm sectionNoticeButton btn-tertiary"
                  >
                    Troubleshooting docs
                    <i
                      class="icon icon-open-in-new"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "replaceStoreState": [Function],
  "rerender": [Function],
  "store": Object {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
  "updateStoreState": [Function],
}
`;
